--- a/Artero/Info.plist
+++ b/Artero/Info.plist
@@ -22,6 +22,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Enable the camera access to save your activities</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -31,10 +33,8 @@
 	<true/>
 	<key>UILaunchScreen</key>
 	<dict>
-		<key>UIColorName</key>
-		<string>splash-background</string>
 		<key>UIImageName</key>
-		<string>splash-image</string>
+		<string>splash-inteira</string>
 	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
